flux/academy/miniflux/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: miniflux
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
